--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "deploy": "push-dir --dir=dist --branch=master --cleanup"
+    "deploy": "push-dir --dir=dist --branch=master-b7f8cd0 --cleanup"
   },
   "dependencies": {
     "vue": "^2.5.2",
